<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Register">

    <LinearLayout
        android:id="@+id/travel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CDC9C9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6F9F9"
                        android:inputType="text"
                        android:hint="@string/enter_first_name"
                        android:textSize="30sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6F9F9"
                        android:inputType="text"
                        android:hint="@string/enter_last_name"
                        android:textSize="30sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6F9F9"
                        android:inputType="textEmailAddress"
                        android:hint="@string/enter_email"
                        android:textSize="30sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6F9F9"
                        android:inputType="phone"
                        android:hint="@string/enter_phone"
                        android:textSize="30sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passengers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6F9F9"
                        android:inputType="number"
                        android:hint="@string/enter_passengers"
                        android:textSize="30sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6F9F9"
                        android:inputType="date"
                        android:hint="@string/enter_date"
                        android:textSize="30sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6F9F9"
                        android:inputType="text"
                        android:hint="@string/enter_source"
                        android:textSize="30sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6F9F9"
                        android:inputType="text"
                        android:hint="@string/enter_destination"
                        android:textSize="30sp" />

                </com.google.android.material.textfield.TextInputLayout>
                <Spinner
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/statuses"
                    android:background="#F6F9F9"
                    android:textSize="30sp"
                   />

                <Spinner
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/companies"
                    android:textSize="30sp"
                    android:background="#F6F9F9"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#682497C9"
                        android:text="@string/register"
                        android:textAlignment="center" />

                    <Button
                        android:id="@+id/previous"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#FF9800"
                        android:text="@string/previous"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>